--- a/public/thanks.html
+++ b/public/thanks.html
@@ -18,6 +18,42 @@
     <title>Portfolio - Tamaya Lucas</title>
   </head>
   <body>
-    <h1>Merci pour votre message !</h1>
+    <main>
+      <section>
+        <div class="mainContainer">
+          <p class="presentation--hello">Votre message a été envoyé !</p>
+          <p class="presentation--info">
+            Je vous répondrai dans les plus bref délais
+          </p>
+          <a href="index.html" class="btn--cta">Revenir à mon portfolio</a>
+        </div>
+      </section>
+
+      <!-- Links bottom left -->
+      <div class="social">
+        <a
+          href="https://www.linkedin.com/in/lucas-tamaya-41a09621b/"
+          target="_blank"
+        >
+          <div class="pulse"></div>
+          <i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/LucasTamaya" target="_blank">
+          <div class="pulse"></div>
+          <i class="fab fa-github"></i
+        ></a>
+        <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+          <div class="pulse"></div>
+          <i class="fas fa-briefcase"></i
+        ></a>
+        <div class="contact--line"></div>
+      </div>
+
+      <!-- Email bottom right -->
+      <div class="email">
+        <p class="email--item">lucastamaya.974@gmail.com</p>
+        <div class="contact--line"></div>
+      </div>
+    </main>
   </body>
 </html>
