--- a/public/mentions-légales.html
+++ b/public/mentions-légales.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <main class="legalContainer">
+      <a href="index.html" class="btn--cta legal--btn"
+        ><i class="fas fa-hand-point-left"></i> Portfolio</a
+      >
       <h1 class="legal--title">Mentions Légales</h1>
 
       <div class="legalContent">
