--- a/public/thanks.html
+++ b/public/thanks.html
@@ -21,7 +21,7 @@
     <main>
       <section>
         <div class="mainContainer">
-          <p class="presentation--hello">Votre message a été envoyé !</p>
+          <h2 class="presentation--hello">Votre message a été envoyé !</h2>
           <p class="presentation--info">
             Je vous répondrai dans les plus bref délais
           </p>
